LPS-126682 Avoid wrapping toolbar elements

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/Toolbar.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/Toolbar.scss
@@ -28,6 +28,10 @@
 		white-space: nowrap;
 
 		> .navbar-nav {
+			display: flex;
+			flex-wrap: nowrap;
+			max-width: 100%;
+			overflow: auto;
 			padding: 12px;
 
 			&.start {
